--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,11 +10,11 @@
 						Account Login
 					</span>
 					
-					<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
+					<div class="wrap-input100 wrap-input100 validate-input m-b-20" data-validate="Type user name">
 						<input id="first-name" class="input100" type="text" name="username" placeholder="User name">
 						<span class="focus-input100">{{ form.username }}</span>
 					</div>
-					<div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
+					<div class="wrap-input100 wrap-input100 validate-input m-b-20" data-validate="Type password">
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100">{{ form.password }}</span>
 					</div>
@@ -27,15 +27,15 @@
 						</button>
 					</div>
 
-					 <div class="w-full text-center p-t-27 p-b-239">
-						<!--<span class="txt1">
+					 <!--<div class="w-full text-center p-t-27 p-b-239">
+						<span class="txt1">
 							Forgot
 						</span>
 
 						<a href="#" class="txt2">
 							User name / password?
-						</a> -->
-					</div>
+						</a>
+					</div> -->
 
 					<div class="w-full text-center">
 						<span class="txt1">
