--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,17 +10,17 @@
                         REGISTER
 					</span>
 					
-					<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
-
-						<span class="focus-input100"><input id="first-name" class="input100" type="text" name="username" placeholder="User name">{{ form.username }}</span>
+					<div class="wrap-input100 validate-input m-b-20" data-validate="Type user name">
+						<input id="username" class="input100" type="text" name="username" placeholder="User name">
+						<span class="focus-input100">{{ form.username }}</span>
                     </div>
-					<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type email">
-
-						<span class="focus-input100"><input id="email" class="input100" type="text" name="email" placeholder="email"> {{ form.email }}</span>
+					<div class="wrap-input100 validate-input m-b-20" data-validate="Type email">
+						<input id="email" class="input100" type="text" name="email" placeholder="Email">
+						<span class="focus-input100">{{ form.email }}</span>
                     </div>
-					<div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
-
-						<span class="focus-input100"><input class="input100" type="password" name="pass" placeholder="Password">{{ form.password }}</span>
+					<div class="wrap-input100 validate-input m-b-20" data-validate="Type password">
+						<input class="input100" type="password" name="pass" placeholder="Password">
+						<span class="focus-input100">{{ form.password }}</span>
 					</div>
 
 					<div class="container-login100-form-btn">
