--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -4,8 +4,10 @@
 
 
 			<div class="wrap-login100">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-34">
+				<div >
+
+				</div>
+					<span class="login100-form-title p-b-20 p-t-100">
 						You Have Logged Out Successfully !
 					</span>
 					
@@ -24,25 +26,15 @@
 							Sign in
 							</a>
 						</button>
-					</div>
-
-					<div class="w-full text-center p-t-27 p-b-239">
-						<span class="txt1">
-							Forgot
-						</span>
-
-						<a href="#" class="txt2">
-							User name / password?
-						</a>
-					</div>
-
-					<div class="w-full text-center">
-						<a href="#" class="txt3">
-							Sign Up
-						</a>
 					</div> -->
-				</form>
 
-				<div class="login100-more" style="background-image: url('../static/img/bg-01.jpg');"></div>
+					<div class="w-full text-center p-t-27 p-b-100">
+
+
+						<a href="{% url 'login' %}" class="txt2">
+							Click Here To Sign In Again
+						</a>
+					</div>
+
 			</div>
 {% endblock content %}
