--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -56,7 +56,7 @@
           <li class="nav-item ">
             <a class="nav-link" href="{% url 'student:table' %}">
               <i class="material-icons">content_paste</i>
-              <p>Table List</p>
+              <p>Student List</p>
             </a>
           </li>
           <li class="nav-item ">
@@ -122,12 +122,12 @@
               </div>
             </form>
             <ul class="navbar-nav">
-              <li class="nav-item">
+             <!-- <li class="nav-item">
 
                   <i class="material-icons">dashboard</i>
 
               </li>
-             <!-- <li class="nav-item dropdown">
+             <li class="nav-item dropdown">
                 <a class="nav-link" href="javscript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="material-icons">notifications</i>
                   <span class="notification">5</span>
@@ -150,9 +150,21 @@
                     Account
                   </p>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="user.html">Edit Profile</a>
-                  <a class="dropdown-item" href="{% url 'logout'}">Log Out</a>
+                <script>
+                  var url = "{% url 'ajax_load_profile' %}"
+                  $.ajax({
+                    url: url,
+                    success: function(data){
+                      $.each(data, function(index,text){
+                      $('<option></option').val(index).html(text);
+                    };
+                    }
+                  });
+
+                </script>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <option><a class="dropdown-item" href="user.html">Edit Profile</a></option>
+                  <option><a class="dropdown-item" href="{% url 'logout'}">Log Out</a></option>
                 </div>
               </li>
             </ul>
