--- a/student/templates/student/student_form.html
+++ b/student/templates/student/student_form.html
@@ -24,10 +24,9 @@
                   <p class="card-category">Fill in the details of the student</p>
                 </div>
                 <div class="card-body">
-                  <form method="POST">
+                  <form method="POST" id = "StudentForm">
                     {% csrf_token %}
-
-                        <div class="row">
+                  <div class="row">
                         <div class="col-md-6">
 
                           <label class="bmd-label-floating">Name</label>
@@ -38,10 +37,9 @@
                     <div class="row">
 
                       <div class="col-md-4">
-                        <div class="form-group">
+
                           <label class="bmd-label-floating">Age</label>
                           {% render_field form.age class="form-control" %}
-                        </div>
                       </div>
                     </div>
                     <div class="row">
@@ -102,7 +100,7 @@
                         </div>
                       </div>
                     </div>
-                </div> -->
+                    </div> -->
 
                     <button type="submit" class="btn btn-primary pull-right">Submit</button>
                     <div class="clearfix"></div>
