--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -56,37 +56,28 @@
           <li class="nav-item ">
             <a class="nav-link" href="{% url 'student:table' %}">
               <i class="material-icons">content_paste</i>
-              <p>Table List</p>
+              <p>Resident List</p>
             </a>
           </li>
+
           <li class="nav-item ">
-            <a class="nav-link" href="./typography.html">
-              <i class="material-icons">library_books</i>
-              <p>Typography</p>
+            <a class="nav-link" href="{% url 'student:marriage-view' %}">
+              <i class="material-icons">content_paste</i>
+              <p>Marriage List</p>
             </a>
           </li>
+
           <li class="nav-item ">
-            <a class="nav-link" href="./icons.html">
-              <i class="material-icons">bubble_chart</i>
-              <p>Icons</p>
+            <a class="nav-link" href="{% url 'student:table' %}">
+              <i class="material-icons">content_paste</i>
+              <p>Job List</p>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./map.html">
-              <i class="material-icons">location_ons</i>
-              <p>Maps</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./notifications.html">
-              <i class="material-icons">notifications</i>
-              <p>Notifications</p>
-            </a>
-          </li>
+
           <li class="nav-item ">
             <a class="nav-link" href="{% url 'student:add' %}">
               <i class="material-icons">add_circle_outline</i>
-              <p>Student</p>
+              <p>Add Resident</p>
             </a>
           </li>
           <!-- <li class="nav-item active-pro ">
