--- a/student/templates/student/marriage_list.html
+++ b/student/templates/student/marriage_list.html
@@ -1,17 +1,3 @@
-<!--
-=========================================================
-* Material Dashboard Dark Edition - v2.1.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/material-dashboard-dark
-* Copyright 2019 ASRA (http://www.creative-tim.com)
-
-* Coded by www.creative-tim.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 {% extends "student/base.html"%}
 {% load static %}
 {% block content %}
@@ -20,7 +6,7 @@
               <div class="card card-plain">
                 <div class="card-header card-header-primary">
                   <h4 class="card-title ">Resident Details</h4>
-                  <p class="card-category">General Info</p>
+                  <p class="card-category">Marriage Info</p>
                 </div>
                 <div class="card-body">
                   <div class="table-responsive">
@@ -36,35 +22,47 @@
                           Age
                         </th>
                         <th>
-                          D.O.A.
-                        </th>
-                        <th>
-                          D.O.L.
-                        </th>
-                        <th>
                           Gender
+                        </th>
+                        <th>
+                          Job
+                        </th>
+                        <th>
+                          Ailments
+                        </th>
+                         <th>
+                          Preferences
+                        </th>
+                         <th>
+                          Marital Status
                         </th>
                       </thead>
                       <tbody>
-                        {% for student in students %}
+                        {% for marriage in marriages %}
                         <tr>
                           <td>
-                          {{ student.id }}
+                          {{ marriage.student.id }}
                           </td>
                           <td>
-                            {{ student.name }}
+                            {{ marriage.student.name }}
                           </td>
                           <td>
-                            {{ student.age }}
+                            {{ marriage.student.age }}
                           </td>
                           <td>
-                            {{ student.date_of_admission }}
+                            {{ marriage.student.sex }}
                           </td>
                           <td>
-                            {{ student.date_of_leaving }}
+                            {{ marriage.job }}
                           </td>
                           <td>
-                            {{ student.sex }}
+                            {{ marriage.ailments }}
+                          </td>
+                           <td>
+                            {{ marriage.preferences }}
+                          </td>
+                           <td>
+                            {{ marriage.status }}
                           </td>
                         </tr>
                         {% endfor %}
