--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -56,14 +56,14 @@
           </li>
 
           <li class="nav-item ">
-            <a class="nav-link" href="{% url 'student:marriage-view' %}">
+            <a class="nav-link" href="{% url 'student:view-marriage' %}">
               <i class="material-icons">content_paste</i>
               <p>Marriage List</p>
             </a>
           </li>
 
           <li class="nav-item ">
-            <a class="nav-link" href="{% url 'student:table' %}">
+            <a class="nav-link" href="{% url 'student:view-job' %}">
               <i class="material-icons">content_paste</i>
               <p>Job List</p>
             </a>
