--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -18,7 +18,7 @@
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-  ASRA
+  AASRA
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -38,7 +38,7 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo"><a href='#' class="simple-text logo-normal">
-          ASRA
+          AASRA
         </a></div>
       <div class="sidebar-wrapper">
         <ul class="nav">
@@ -196,7 +196,7 @@
           </nav>
           <div class="copyright float-right" id="date">
             , made with <i class="material-icons">favorite</i> by
-            <a href="#" target="blank">ASRA</a> for a better web.
+            <a href="#" target="blank">AASRA</a> for a better web.
           </div>
         </div>
       </footer>
