--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -182,21 +182,11 @@
                   About Us
                 </a>
               </li>
-              <li>
-                <a href="#">
-                  Blog
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Licenses
-                </a>
-              </li>
             </ul>
           </nav>
           <div class="copyright float-right" id="date">
             , made with <i class="material-icons">favorite</i> by
-            <a href="#" target="blank">AASRA</a> for a better web.
+            <a href="#" target="blank">ASRA</a> 
           </div>
         </div>
       </footer>
